[package]
name = "dsrp"
version = "0.1.0"
edition = "2021"
description = "Dead Simple Rom Programmer"

[dependencies]
anyhow = "1.0"
bincode = "2.0.0-alpha.1"
bytes = "1.1"
bytesize = "1.1"
crc = "2.1.0"
from_variants = "0.6"
indicatif = "0.16"
num_enum = "0.5"
parse_int = "0.6"
serialport = "4.0"
structopt = "0.3"
strum = { version = "0.22", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
expect-test = "1.1"
pipe = "0.4"
